change project structure

--- a/src/index.html
+++ b/src/index.html
@@ -7,46 +7,36 @@
     <meta name='viewport' content='width=device-width, maximum-scale=1.0, minimum-scale=1.0, initial-scale=1.0' />
 
     <title>Site</title>
-
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-
-    <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
   </head>
 
   <body>
 
-  	<div class="deruino">
-  		Сайт разработан при помощи DERUINO
-  	</div>
-
     <div class="modalblock add_name">
       <div class="modal_container">
-        <div class="close_modal"><img src="css/images/close.png"></div>
+        <div class="close_modal"><img src="assets/images/close.png"></div>
         <div class="modal_title">
           Поставщики
         </div>
         <div class="nameblock">
           <div class="name">
             LUBO
-              <img src="css/images/trash.svg">
+              <img src="assets/images/trash.svg">
           </div>
           <div class="name">
             Crystal
-              <img src="css/images/trash.svg">
+              <img src="assets/images/trash.svg">
           </div>
           <div class="name">
             Emmy поворотник
-              <img src="css/images/trash.svg">
+              <img src="assets/images/trash.svg">
           </div>
           <div class="name">
             Новый поставщик
-              <img src="css/images/trash.svg">
+              <img src="assets/images/trash.svg">
           </div>
         </div>
         <div class="add_button">
-          Добавить поставщика <img src="css/images/add_name.svg">
+          Добавить поставщика <img src="assets/images/add_name.svg">
                 
         </div>
         <div class="buttons_block">
@@ -68,7 +58,7 @@
 
     <div class="modalblock add_table">
       <div class="modal_container">
-        <div class="close_modal"><img src="css/images/close.png"></div>
+        <div class="close_modal"><img src="assets/images/close.png"></div>
         <div class="modal_title">
           Добавление накладной
         </div>
@@ -161,7 +151,7 @@
               <div class="input">
                 <input class="dollar_input" type="text" placeholder="01.07.2020">
                 <span class="date">
-                  <img src="css/images/date.svg">
+                  <img src="assets/images/date.svg">
                 </span>
               </div>
             </div>
@@ -172,7 +162,7 @@
               <div class="input">
                 <input class="dollar_input" type="text" placeholder="01.08.2020">
                 <span class="date">
-                  <img src="css/images/date.svg">
+                  <img src="assets/images/date.svg">
                 </span>
               </div>
             </div>
@@ -200,7 +190,7 @@
           <div class="col-12 col-sm-12 col-md-6 col-lg-4 col-xl-4 modalcol">
             <div class="inputblock add_file">
               <div class="add_text">
-                Прикрепить файл <img src="css/images/add_file.svg">       
+                Прикрепить файл <img src="assets/images/add_file.svg">       
               </div>
             </div>
           </div>
@@ -209,7 +199,7 @@
               <div class="input_title">Загруженные файлы</div>
               <div class="input">
                 Lubo order 22... .xls <span class="delete_file">
-                  <img src="css/images/delete_file.svg">
+                  <img src="assets/images/delete_file.svg">
                 </span>
               </div>
             </div>
@@ -237,12 +227,12 @@
         <div class="myrow row align-items-center">
           <div class="col-8 col-sm-6 col-md-6 col-lg-3 col-xl-3 order-1 order-lg-1 logo_fix">
             <div class="logo">
-              <img src="css/images/logo.svg">
+              <img src="assets/images/logo.svg">
               <br>
 				      <span class="logo_text">Автозапчасти и тюнинг автомобилей Land Rover</span>
             </div>
             <!--<div class="logo">
-              <img src="css/images/logo_fixed.png">
+              <img src="assets/images/logo_fixed.png">
             </div>
  			      <div class="logo_text">
             	Автозапчасти и тюнинг автомобилей Land Rover
@@ -252,7 +242,7 @@
             <div class="findblock">
               <input type="text" placeholder="Поиск накладной">
               <input class="submit" type="submit">
-              <img class="find" src="css/images/find.svg">
+              <img class="find" src="assets/images/find.svg">
             </div>
           </div>
           <div class="col-4 col-sm-6 col-md-6 col-lg-3 col-xl-3 order-2 order-lg-3">
@@ -281,9 +271,9 @@
           </div>
           <div class="filterblock2">
           <ul>
-            <li>Дата отправки <img src="css/images/filterin.svg">
+            <li>Дата отправки <img src="assets/images/filterin.svg">
             </li>
-            <li>Дата прибытия <img src="css/images/filterout.svg">
+            <li>Дата прибытия <img src="assets/images/filterout.svg">
 			     </li>
           </ul>
         </div>
@@ -303,10 +293,10 @@
                 <th>Доставка до склада</th>
                 <th>Итого</th>
                 <th>Оплачен</th>
-                <th>Дата отправки <img src="css/images/filter.svg">
+                <th>Дата отправки <img src="assets/images/filter.svg">
                 </th>
                 <th>Дней в пути</th>
-                <th>Дата прибытия <img src="css/images/filter.svg">
+                <th>Дата прибытия <img src="assets/images/filter.svg">
                 </th>
                 <th>Вид доставки</th>
                 <th>Статус</th>
@@ -330,17 +320,17 @@
                 <td data-label="Дней в пути:" class="hide">10</td>
                 <td data-label="Дата прибытия:">12.08.2020 <span class="hide gray">(10 дней)</span></td>
                 <td data-label="Вид доставки:" class="hide">
-                  <img src="css/images/air.svg">    
+                  <img src="assets/images/air.svg">    
               </td>
                 <td data-label="Статус доставки:" class="delivered bold"><span class="green">Доставлен</span></td>
                 <td class="open">
-                  <span>Открыть <img src="css/images/open.svg">
+                  <span>Открыть <img src="assets/images/open.svg">
                 </span>
               </td>
               </tr>
               <tr>
                 <td colspan="15" class="tableico">
-                  <img src="css/images/ico1.png"><img src="css/images/ico2.png"><img src="css/images/ico2.png"><img src="css/images/add_ico.svg">
+                  <img src="assets/images/ico1.png"><img src="assets/images/ico2.png"><img src="assets/images/ico2.png"><img src="assets/images/add_ico.svg">
                 </td>
               </tr>
             </tbody>
@@ -359,17 +349,17 @@
                 <td data-label="Дата отправки:">12.07.2020</td>
                 <td data-label="Дней в пути:" class="hide">10</td>
                 <td data-label="Дата прибытия:">12.08.2020 <span class="hide gray">(10 дней)</span></td>
-                <td data-label="Вид доставки:" class="hide"><img src="css/images/train.svg">
+                <td data-label="Вид доставки:" class="hide"><img src="assets/images/train.svg">
                 </td>
                 <td data-label="Статус доставки:" class="delivered bold"><span class="red">Не доставлен</span></td>
                 <td colspan="4" class="open">
-                  <span>Открыть <img src="css/images/open.svg">
+                  <span>Открыть <img src="assets/images/open.svg">
                 </span>
                 </td>
               </tr>
               <tr>
-                <td colspan="15" class="tableico"><img src="css/images/ico1.png">
-                  <img src="css/images/add_ico.svg">
+                <td colspan="15" class="tableico"><img src="assets/images/ico1.png">
+                  <img src="assets/images/add_ico.svg">
                 </td>
               </tr>
             </tbody>
@@ -388,16 +378,16 @@
                 <td data-label="Дата отправки:">12.07.2020</td>
                 <td data-label="Дней в пути:" class="hide">10</td>
                 <td data-label="Дата прибытия:">12.08.2020 <span class="hide gray">(10 дней)</span></td>
-                <td data-label="Вид доставки:" class="hide"><img src="css/images/truck.svg">
+                <td data-label="Вид доставки:" class="hide"><img src="assets/images/truck.svg">
                 </td>
                 <td data-label="Статус доставки:" class="delivered bold"><span class="orange">Не отправлен</span></td>
-                <td colspan="4" class="open"><span>Открыть <img src="css/images/open.svg">
+                <td colspan="4" class="open"><span>Открыть <img src="assets/images/open.svg">
                 </span>
                 </td>
               </tr>
               <tr>
                 <td colspan="15" class="tableico">
-                  <img src="css/images/ico1.png"><img src="css/images/ico2.png"><img src="css/images/ico2.png"><img src="css/images/add_ico.svg">
+                  <img src="assets/images/ico1.png"><img src="assets/images/ico2.png"><img src="assets/images/ico2.png"><img src="assets/images/add_ico.svg">
                 </td>
               </tr>
             </tbody>
@@ -416,14 +406,14 @@
                 <td data-label="Дата отправки:">12.07.2020</td>
                 <td data-label="Дней в пути:" class="hide">10</td>
                 <td data-label="Дата прибытия:">12.08.2020 <span class="hide gray">(10 дней)</span></td>
-                <td data-label="Вид доставки:" class="hide"><img src="css/images/ship.svg">
+                <td data-label="Вид доставки:" class="hide"><img src="assets/images/ship.svg">
                 </td>
                 <td data-label="Статус доставки:" class="delivered bold"><span class="red">Не отправлен</span></td>
-                <td colspan="4" class="open"><span>Открыть <img src="css/images/open.svg">
+                <td colspan="4" class="open"><span>Открыть <img src="assets/images/open.svg">
                 </span></td>
               </tr>
               <tr>
-                <td colspan="15" class="tableico"><img src="css/images/add_ico.svg">
+                <td colspan="15" class="tableico"><img src="assets/images/add_ico.svg">
               </td>
               </tr>
             </tbody>
@@ -442,14 +432,14 @@
                 <td data-label="Дата отправки:">12.07.2020</td>
                 <td data-label="Дней в пути:" class="hide">10</td>
                 <td data-label="Дата прибытия:">12.08.2020 <span class="hide gray">(10 дней)</span></td>
-                <td data-label="Вид доставки:" class="hide"><img src="css/images/train.svg">
+                <td data-label="Вид доставки:" class="hide"><img src="assets/images/train.svg">
                 </td>
                 <td data-label="Статус доставки:" class="delivered bold"><span class="red">Не отправлен</span></td>
-                <td colspan="4" class="open"><span>Открыть <img src="css/images/open.svg">
+                <td colspan="4" class="open"><span>Открыть <img src="assets/images/open.svg">
                 </span></td>
               </tr>
               <tr>
-                <td colspan="15" class="tableico"><img src="css/images/ico1.png"><img src="css/images/ico2.png"><img src="css/images/ico2.png"><img src="css/images/add_ico.svg">
+                <td colspan="15" class="tableico"><img src="assets/images/ico1.png"><img src="assets/images/ico2.png"><img src="assets/images/ico2.png"><img src="assets/images/add_ico.svg">
               </td>
               </tr>
             </tbody>
@@ -468,14 +458,14 @@
                 <td data-label="Дата отправки:">12.07.2020</td>
                 <td data-label="Дней в пути:" class="hide">10</td>
                 <td data-label="Дата прибытия:">12.08.2020 <span class="hide gray">(10 дней)</span></td>
-                <td data-label="Вид доставки:" class="hide"><img src="css/images/truck.svg">
+                <td data-label="Вид доставки:" class="hide"><img src="assets/images/truck.svg">
                 </td>
                 <td data-label="Статус доставки:" class="delivered bold"><span class="green">Отправлен</span></td>
-                <td colspan="4" class="open"><span>Открыть <img src="css/images/open.svg">
+                <td colspan="4" class="open"><span>Открыть <img src="assets/images/open.svg">
                 </span></td>
               </tr>
               <tr>
-                <td colspan="15" class="tableico"><img src="css/images/ico1.png"><img src="css/images/ico2.png"><img src="css/images/ico2.png"><img src="css/images/add_ico.svg">
+                <td colspan="15" class="tableico"><img src="assets/images/ico1.png"><img src="assets/images/ico2.png"><img src="assets/images/ico2.png"><img src="assets/images/add_ico.svg">
               </td>
               </tr>
             </tbody>
@@ -492,12 +482,12 @@
                   <tbody>
                     <tr>
                       <td>6 грузов</td>
-                      <td><img src="css/images/line.png"></td>
+                      <td><img src="assets/images/line.png"></td>
                       <td>47 000 $</td>
                     </tr>
                     <tr>
                       <td>Доставка</td>
-                      <td><img src="css/images/line.png"></td>
+                      <td><img src="assets/images/line.png"></td>
                       <td>22 500 $</td>
                     </tr>
                   </tbody>
@@ -513,13 +503,13 @@
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 order-1 order-lg-2">
             <div class="navigationblock">
-              <span class="prev"><img src="css/images/prev.png"></span> <span class="currentpage">2</span> / <span class="allpage">12</span> <span class="next"><img src="css/images/next.png"></span>
+              <span class="prev"><img src="assets/images/prev.png"></span> <span class="currentpage">2</span> / <span class="allpage">12</span> <span class="next"><img src="assets/images/next.png"></span>
             </div>
           </div>
           <div class="col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4 order-3 order-lg-3 mycol">
             <div class="uploadblock">
               <div class="uploadimg">
-                <img src="css/images/upload.png">
+                <img src="assets/images/upload.png">
               </div>
               <div class="uploadtext">
                 Перетащите сюда файл или нажмите кнопку<br>ниже, чтобы выбрать файл на компьютере
@@ -537,8 +527,6 @@
         </div>
       </div>
     </div>
-
-    <script type="text/javascript" src="js/script.js"></script>
   </body>
 
 </html>
